bueno los validadores como que los he descartado porque es un poco antipatron y en los findBy al final tengo un optional que me dice si existe o no la clase en cuestion pero los dejo porque me hace ilusion
