# dao/src/main/java/org/jacobo/adyd/infraestructure/persistence/CampaignJpaRepository.java
@@ -3,6 +3,7 @@ package org.jacobo.adyd.infraestructure.persistence;
 import org.jacobo.adyd.domain.model.CampaignModel;
 import org.jacobo.adyd.infraestructure.entities.CampaignEntity;
 import org.jacobo.adyd.infraestructure.entities.RaceEntity;
+import org.jacobo.adyd.infraestructure.projection.CampaignPlayerClassProjection;
 import org.jacobo.adyd.infraestructure.projection.CampaignRaceProjection;
 import org.springframework.data.jpa.repository.JpaRepository;
 import org.springframework.data.jpa.repository.Modifying;
@@ -21,4 +22,8 @@ public interface CampaignJpaRepository extends JpaRepository<CampaignEntity, Lon
 
     void deleteCampaignEntitiesByRaceEntities(Set<RaceEntity> raceEntities);
 
+    @Query("""
+        SELECT c.name as campaignName, p.name as playerClassName, p.id as playerClassId FROM CampaignEntity c JOIN c.playerClasses p WHERE c.id = :campaignId
+    """)
+    List<CampaignPlayerClassProjection> findAllPlayerClassForCampaign(Long campaignId);
 }
