# lib/src/main/java/org/jacobo/adyd/infraestructure/mapper/CampaignDtoMapper.java
@@ -1,16 +1,18 @@
 package org.jacobo.adyd.infraestructure.mapper;
+
 import org.jacobo.adyd.api.dto.CampaignDto;
+import org.jacobo.adyd.api.dto.CampaignPlayerClassDto;
 import org.jacobo.adyd.api.dto.CampaignRaceDto;
 import org.jacobo.adyd.domain.model.CampaignModel;
+import org.jacobo.adyd.domain.model.CampaignPlayerClassModel;
 import org.jacobo.adyd.domain.model.CampaignRaceModel;
-import org.jacobo.adyd.infraestructure.mapper.RaceDtoMapper;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.mapstruct.MappingTarget;
 
 import java.util.List;
 
-@Mapper(componentModel = "spring", uses = {RaceDtoMapper.class})
+@Mapper(componentModel = "spring", uses = {RaceDtoMapper.class, PlayerClassDtoMapper.class})
 public interface CampaignDtoMapper {
 
     CampaignDto toDto(CampaignModel campaign);
@@ -28,4 +30,8 @@ public interface CampaignDtoMapper {
     @Mapping(target = "campaign", source = "campaignName")
     @Mapping(target = "races", source = "races")
     CampaignRaceDto toCampaignRaceDto(CampaignRaceModel campaignRace);
+
+    @Mapping(target = "campaign", source = "campaign")
+    @Mapping(target = "playerClass", source = "playerClass")
+    CampaignPlayerClassDto toCampaignPlayerClassDto(CampaignPlayerClassModel playerClassForCampaign);
 }
