# model/src/main/java/org/jacobo/adyd/domain/validator/EntityType.java
@@ -1,0 +1,8 @@
+package org.jacobo.adyd.domain.validator;
+
+public enum EntityType {
+
+    RACE,
+    CAMPAIGN,
+    PLAYER_CLASS;
+}
